# dymion

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  pyproject.toml
docs/locales/es/LC_MESSAGES/: api.mo  api.po  course.mo  course.po  index.po
docs/source/: api.rst  conf.py  course.rst  index.rst
docs/source/_templates/: languages.html  layout.html
examples/: ball_simulation.py
examples/dynamics_examples/: box_mass.py  collision_2d.py  energy_conservation.py  export_projectile.py  launch_simulation.py  spinning_object.py  the_orbit.py
examples/kinematics_examples/: fan_starting_up.py
src/dymion/: __init__.py
src/dymion/core/: io.py  vector.py
src/dymion/dynamics/: __init__.py  body.py  collisions.py  energy.py  forces.py  materials.py  momentum.py  rotational.py  statics.py  systems.py
src/dymion/kinematics/: __init__.py  circular.py  linear.py
tests/: stress_test.py  test_circular.py  test_core.py  test_dynamics.py  test_energy.py  test_forces.py  test_kinematics.py  test_materials.py  test_momentum.py  test_rotational.py  test_systems.py  test_v07_remaining.py
