[build-system]
requires = ["setuptools>=81.0.0"]
build_backend = "setuptools.build_meta"

[project]
name = "dymion"
version = "0.1.0"
description = "A professional physics library for kinematics and dynamics. Remake of Cinetica."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Elabsurdo984" }]
dependencies = [
    "numpy>=1.24.0",
    "pint>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]