[build-system]
requires = ["setuptools>=81.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dymion"
version = "0.3.0"
description = "A professional physics library for kinematics and dynamics. Remake of Cinetica."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Elabsurdo984", email = "matiassfernandez00@gmail.com" }
]
keywords = ["physics", "kinematics", "dynamics", "vector", "simulation", "engine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24.0",
    "pint>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "build",
    "twine",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.2",
    "myst-parser>=2.0",
]

[project.urls]
Repository = "https://github.com/Elabsurdo984/dymion.git"
"Bug Tracker" = "https://github.com/Elabsurdo984/dymion/issues"

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I"]